# diary_rust

./: .gitignore  Cargo.toml  TODO  config.ini.sample  db-migration.md
src/: main.rs
src/cli/: cli.rs  mod.rs
src/config/: config.rs  mod.rs
src/db/: mod.rs  postgres.rs  sqlite.rs  tests_postgres.rs  tests_sqlite.rs
src/models/: entry.rs  mod.rs
