[package]
name = "rust_diary"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time", "chrono", "postgres"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
dotenv = "0.15"